--- a/drombler-commons-security-srp-client/pom.xml
+++ b/drombler-commons-security-srp-client/pom.xml
@@ -29,6 +29,18 @@ Contributor(s): .
     <name>Drombler Commons - Security - SRP - Client</name>
     <inceptionYear>2012</inceptionYear>
 
+    <scm>
+        <connection>${scm.connection}</connection>
+        <developerConnection>${scm.developerConnection}</developerConnection>
+        <url>${scm.url}</url>
+    </scm>
+
+    <properties>
+        <scm.connection>${scm.parent.connection}</scm.connection>
+        <scm.developerConnection>${scm.parent.developerConnection}</scm.developerConnection>
+        <scm.url>${scm.parent.url}</scm.url>
+    </properties>
+    
     <!-- Not inherited!?? -->
     <prerequisites>
         <maven>${maven.version}</maven>
