- JavaDoc - Unit Tests - small fixes

--- a/drombler-commons-fx/drombler-commons-fx-ensemble/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-ensemble/pom.xml
@@ -21,7 +21,7 @@
     <distributionManagement>
         <site>
             <id>drombler</id>
-            <url>${distributionManagement.parent.url}</url>
+            <url>${distributionManagement.parent.url}/</url>
         </site>
     </distributionManagement>
 
