--- a/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-application/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-application/pom.xml
@@ -21,7 +21,7 @@
     <distributionManagement>
         <site>
             <id>drombler</id>
-            <url>${distributionManagement.parent.url}/${project.artifactId}</url>
+            <url>${distributionManagement.parent.url}/${project.artifactId}/</url>
         </site>
     </distributionManagement>
     
