--- a/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-parent/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-parent/pom.xml
@@ -37,7 +37,7 @@
         <site>
             <id>drombler</id>
             <name>Drombler Commons</name>
-            <url>${distributionManagement.parent.url}/${project.artifactId}</url>
+            <url>${distributionManagement.parent.url}/${project.artifactId}/</url>
         </site>
     </distributionManagement>   
      
