--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@ Contributor(s): .
     <distributionManagement>
         <site>
             <id>drombler</id>
-            <url>${distributionManagement.parent.url}</url>
+            <url>${distributionManagement.parent.url}/</url>
         </site>
     </distributionManagement>
     
