--- a/drombler-commons-parent/pom.xml
+++ b/drombler-commons-parent/pom.xml
@@ -68,12 +68,17 @@ Contributor(s): .
     </prerequisites>
     <build>
         <pluginManagement>
-            <plugins>
+            <plugins>                
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>2.9</version>
                     <configuration>
+                        <additionalJOption>-J-Djavafx.javadoc=true</additionalJOption>
+                        <!--<additionalparam>-javafx</additionalparam>-->
+                        <doclet>com.javafx.tools.doclets.formats.html.HtmlDoclet</doclet>
+                        <docletPath>${env.JAVA_HOME}/lib/javafx-doclet.jar</docletPath>
+                        <show>private</show>
                         <detectLinks>true</detectLinks>
                         <links>
                             <!-- javadoc link for javax.persistence -->
@@ -123,6 +128,11 @@ Contributor(s): .
                                     </reportSet>
                                 </reportSets>
                                 <configuration>
+                                    <additionalJOption>-J-Djavafx.javadoc=true</additionalJOption>
+                                    <doclet>com.javafx.tools.doclets.formats.html.HtmlDoclet</doclet>
+                                    <docletPath>${env.JAVA_HOME}/lib/javafx-doclet.jar</docletPath>
+                                    <show>private</show>
+                                    <!--<additionalparam>-javafx</additionalparam>-->
                                     <detectLinks>true</detectLinks>
                                     <links>
                                         <!-- javadoc link for javax.persistence -->
