--- a/drombler-commons-fx/pom.xml
+++ b/drombler-commons-fx/pom.xml
@@ -37,8 +37,8 @@ Contributor(s): .
     
     <distributionManagement>
         <site>
-            <id>drombler</id>
-            <url>${distributionManagement.parent.url}/</url>
+            <id>drombler.sourceforge.net</id>
+            <url>${distributionManagement.fx.parent.url}/</url>
         </site>
     </distributionManagement>
 
