--- a/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-time/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-time/pom.xml
@@ -20,8 +20,8 @@
 
     <distributionManagement>
         <site>
-            <id>drombler</id>
-            <url>${distributionManagement.parent.url}/${project.artifactId}/</url>
+            <id>drombler.sourceforge.net</id>
+            <url>${distributionManagement.fx.ensemble.parent.url}/${project.artifactId}/</url>
         </site>
     </distributionManagement>
     
