--- a/drombler-commons-fx/drombler-commons-fx-parent/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-parent/pom.xml
@@ -5,7 +5,7 @@
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-parent</artifactId>
         <version>0.1-SNAPSHOT</version>
-        <relativePath>../drombler-commons-parent</relativePath>
+        <relativePath>../../drombler-commons-parent</relativePath>
     </parent>
     <artifactId>drombler-commons-fx-parent</artifactId>
     <packaging>pom</packaging>
