--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@ Contributor(s): .
     <parent>
         <groupId>org.drombler.commons</groupId>
         <artifactId>drombler-commons-parent</artifactId>
-        <version>0.1-SNAPSHOT</version>
+        <version>0.1</version>
         <relativePath>drombler-commons-parent</relativePath>
     </parent>
     <artifactId>drombler-commons-all</artifactId>
