--- a/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-parent/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-parent/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>org.drombler.commons</groupId>
     <artifactId>drombler-commons-fx-ensemble-parent</artifactId>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
  
     <name>Drombler Commons - FX - Ensemble - Parent</name>
