--- a/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-parent/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-parent/pom.xml
@@ -46,7 +46,7 @@
         <scm.parent.connection>scm:hg:http://hg.code.sf.net/p/drombler/drombler-commons</scm.parent.connection>
         <scm.parent.developerConnection>scm:hg:ssh://${username}@hg.code.sf.net/p/drombler/drombler-commons</scm.parent.developerConnection>
         <scm.parent.url>http://sourceforge.net/p/drombler/drombler-commons</scm.parent.url>
-        <distributionManagement.fx.ensemble.parent.url>scp://shell.sourceforge.net/home/project-web/drombler/htdocs/DromblerCommons/docs/site/${project.version}/drombler-commons-fx/drombler-commons-fx-ensemble</distributionManagement.fx.ensemble.parent.url>
+        <distributionManagement.fx.ensemble.parent.url>scp://${username}@shell.sourceforge.net/home/project-web/drombler/htdocs/DromblerCommons/docs/site/${project.version}/drombler-commons-fx/drombler-commons-fx-ensemble</distributionManagement.fx.ensemble.parent.url>
 
         <!-- Dependency Versions Defaults -->
         <drombler-fx.version>0.1</drombler-fx.version>
