--- a/drombler-commons-fx/drombler-commons-fx-time/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-time/pom.xml
@@ -49,6 +49,9 @@ Contributor(s): .
         <scm.connection>${scm.parent.connection}</scm.connection>
         <scm.developerConnection>${scm.parent.developerConnection}</scm.developerConnection>
         <scm.url>${scm.parent.url}</scm.url>
+        <java.min.version>1.8</java.min.version>
+        <javafx.version>8.0</javafx.version>
+        <jdk8Home>/opt/jdk1.8.0</jdk8Home>
     </properties>
     
     <!-- Not inherited!?? -->
@@ -63,45 +66,47 @@ Contributor(s): .
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
             </plugin>
-           
-            <!--            <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>2.3.1</version>
+                <artifactId>maven-toolchains-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>install-threeten-ri</id>
                         <phase>validate</phase>
                         <goals>
-                            <goal>install-file</goal>
+                            <goal>toolchain</goal>
                         </goals>
-                        <configuration>
-                            <file>lib/jsr-310-ri-0.6.3.jar</file>
-                            <groupId>javax.time</groupId>
-                            <artifactId>jsr-310-ri</artifactId>
-                            <version>0.6.3</version>
-                            <packaging>jar</packaging>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>install-threeten-TZDB-all</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>install-file</goal>
-                        </goals>
-                        <configuration>
-                            <file>lib/jsr-310-TZDB-all-0.6.3.jar</file>
-                            <groupId>javax.time</groupId>
-                            <artifactId>jsr-310-TZDB-all</artifactId>
-                            <version>0.6.3</version>
-                            <packaging>jar</packaging>
-                        </configuration>
                     </execution>
                 </executions>
-            </plugin>-->
+                <configuration>
+                    <toolchains>
+                        <jdk>
+                            <version>${java.min.version}</version>
+                            <vendor>oracle</vendor>
+                        </jdk>
+                    </toolchains>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>javafx</groupId>
+                <artifactId>jfxrt</artifactId>
+                <version>${javafx.version}</version>
+                <type>jar</type>
+                <scope>system</scope>
+                <systemPath>${jdk8Home}/jre/lib/ext/jfxrt.jar</systemPath>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>org.drombler.commons</groupId>
@@ -109,20 +114,8 @@ Contributor(s): .
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>javafx</groupId>
-            <artifactId>jfxrt</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.softsmithy.lib</groupId>
             <artifactId>softsmithy-lib-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.time</groupId>
-            <artifactId>jsr-310-ri</artifactId>
-        </dependency>
-        <dependency>                            
-            <groupId>javax.time</groupId>
-            <artifactId>jsr-310-TZDB-all</artifactId>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
