[#19] Date & Time Controls: Migrate to Java SE 8 - JavaFX agnostic utility classes moved from Drombler Commons project to the SoftSmithy project

--- a/drombler-commons-fx/drombler-commons-fx-time/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-time/pom.xml
@@ -115,7 +115,7 @@ Contributor(s): .
         </dependency>
         <dependency>
             <groupId>org.softsmithy.lib</groupId>
-            <artifactId>softsmithy-lib-core</artifactId>
+            <artifactId>softsmithy-lib-time</artifactId>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
