[#19] Date & Time Controls: Migrate to Java SE 8 - Ensemble - Date and Time: Java SE 8/ JavaFX 8

--- a/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-time/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-time/pom.xml
@@ -29,6 +29,8 @@
         <scm.connection>${scm.parent.connection}</scm.connection>
         <scm.developerConnection>${scm.parent.developerConnection}</scm.developerConnection>
         <scm.url>${scm.parent.url}</scm.url>
+        <java.min.version>1.8</java.min.version>
+        <javafx.version>8.0</javafx.version>
     </properties>
     
     <!-- Not inherited!?? -->
@@ -49,8 +51,48 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-toolchains-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>toolchain</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <toolchains>
+                        <jdk>
+                            <version>${java.min.version}</version>
+                            <vendor>oracle</vendor>
+                        </jdk>
+                    </toolchains>
+                </configuration>
+            </plugin>
+<!--            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>-->
         </plugins>
     </build>
+    
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>javafx</groupId>
+                <artifactId>jfxrt</artifactId>
+                <version>${javafx.version}</version>
+                <type>jar</type>
+                <scope>system</scope>
+                <systemPath>${java.home}/lib/ext/jfxrt.jar</systemPath>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     
     <dependencies>
         <dependency>
