--- a/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-parent/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-parent/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.drombler.fx</groupId>
         <artifactId>drombler-fx-parent</artifactId>
-        <version>0.1</version>
+        <version>0.2</version>
         <relativePath />
     </parent>
     <groupId>org.drombler.commons</groupId>
@@ -47,12 +47,12 @@
         <scm.parent.developerConnection>scm:hg:ssh://${username}@hg.code.sf.net/p/drombler/drombler-commons</scm.parent.developerConnection>
         <scm.parent.url>http://sourceforge.net/p/drombler/drombler-commons</scm.parent.url>
         <distributionManagement.fx.ensemble.parent.url>scp://${username}@shell.sourceforge.net/home/project-web/drombler/htdocs/DromblerCommons/docs/site/${project.version}/drombler-commons-fx/drombler-commons-fx-ensemble</distributionManagement.fx.ensemble.parent.url>
-        <java.min.version>1.8</java.min.version>
-        <javafx.version>8.0</javafx.version>
-        <jdk8Home>/opt/jdk1.8.0</jdk8Home>
+<!--        <java.min.version>1.8</java.min.version>
+        <javafx.version>8.0</javafx.version>-->
+        <!--<jdk8Home>/opt/jdk1.8.0</jdk8Home>-->
         
         <!-- Dependency Versions Defaults -->
-        <drombler-fx.version>0.1</drombler-fx.version>
+        <drombler-fx.version>0.2</drombler-fx.version>
     </properties>
     
     <!-- Not inherited!?? -->
@@ -92,7 +92,7 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
-            <plugin>
+<!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-toolchains-plugin</artifactId>
                 <version>1.0</version>
@@ -112,14 +112,14 @@
                         </jdk>
                     </toolchains>
                 </configuration>
-            </plugin>
-            <plugin>
+            </plugin>-->
+<!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
     
@@ -166,14 +166,6 @@
                 <groupId>org.drombler.fx</groupId>
                 <artifactId>drombler-fx-startup-main</artifactId>
                 <version>${drombler-fx.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>javafx</groupId>
-                <artifactId>jfxrt</artifactId>
-                <version>${javafx.version}</version>
-                <type>jar</type>
-                <scope>system</scope>
-                <systemPath>${jdk8Home}/jre/lib/ext/jfxrt.jar</systemPath>
             </dependency>
         </dependencies>
     </dependencyManagement>
