[#19] Date & Time Controls: Migrate to Java SE 8 - Exclude Ensemble - Date and Time (issues with Drombler FX 0.2 and JavaFX 8)

--- a/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-application/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-ensemble/drombler-commons-fx-ensemble-application/pom.xml
@@ -54,13 +54,13 @@
     </build>
     
     <dependencies>      
-        <dependency>
-            <!-- Provides the Date and Time samples -->
+<!--        <dependency>
+             Provides the Date and Time samples 
             <groupId>org.drombler.commons</groupId>
             <artifactId>drombler-commons-fx-ensemble-time</artifactId>
             <version>${project.version}</version>
             <scope>runtime</scope>
-        </dependency>
+        </dependency>-->
         
  
         <dependency> 
