--- a/drombler-commons-fx/drombler-commons-fx-parent/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-parent/pom.xml
@@ -26,7 +26,7 @@
     <distributionManagement>
         <site>
             <id>drombler.sourceforge.net</id>
-            <url>${distributionManagement.parent.url}/${project.artifactId}/</url>
+            <url>${distributionManagement.fx.parent.url}/${project.artifactId}/</url>
         </site>
     </distributionManagement>
     
